--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ecommproject",
   "version": "1.0.0",
-  "description": "",
+  "description": "this is my first E-Commerce project",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
